# MindCradle01

./: .dockerignore  .gitignore  BingSiteAuth.xml  Dockerfile  LICENSE  PROJECT_CONTEXT.md  README.md  behavioral_strategy.md  implementation_plan.md  prerender.py
backend/: .dockerignore  .env  .env.example  Dockerfile  debug_pb.py  docker-compose.yml  fix_pocketbase.py  package-lock.json  pyproject.toml  requirements.txt  reseed.py  setup_pocketbase.py  test_api_routes.py  test_api_with_auth.py  test_db_schema.py  test_insert.py
backend/app/: config.py  main.py
backend/app/core/: __init__.py  security.py
backend/app/data/: blog_data.py  docs_data.py
backend/app/middleware/: rate_limit.py
backend/app/models/: schemas.py
backend/docs/: relationship_memory_system.md
backend/scratch/: check_table.py  parse_routes.py
backend/scripts/: test_magic_login_flow.py
backend/tests/: conftest.py  test_advice_effectiveness.py  test_age_verification.py  test_chat_route.py  test_conversation_themes.py  test_crisis_detection.py  test_csrf.py  test_emotion_trends.py  test_engagement_metrics.py  test_journal_reflection.py  test_jwt_flow.py  test_knowledge_graph.py  test_mood_analysis.py  test_notifications.py  test_password_security.py  test_prediction_engine.py  test_privacy.py  test_proactive_checkins.py  test_profile_routes.py  test_rate_limit.py  test_recovery_patterns.py  test_relationship_memory.py  test_response_type_selection.py  test_rich_context_chat.py  test_ritual_routes.py  test_summarization_and_timeline.py  test_user_personality.py  test_validation.py
(+157 files in other folders)
